--- a/public/client/css/main-style.css
+++ b/public/client/css/main-style.css
@@ -74,6 +74,8 @@ a { text-decoration: none }
 .client_lr_form .signup-form h2 { color: #636363; margin: 0 0 15px; position: relative; text-align: center }
 .client_lr_form .hint-text { color: #999; margin-bottom: 30px; text-align: center }
 .client_lr_form form { color: #999; border-radius: 3px; margin-bottom: 15px; background: #f2f3f7; box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3); padding: 30px }
+.client_lr_form form h2 { color: #28a745 }
+
 .client_lr_form .form-group { margin-bottom: 20px }
 .client_lr_form input[type="checkbox"] { margin-top: 3px }
 .client_lr_form .btn { font-size: 16px; font-weight: bold; min-width: 140px; outline: none !important }
