--- a/public/client/css/main-style.css
+++ b/public/client/css/main-style.css
@@ -47,7 +47,7 @@ a { text-decoration: none }
 .post-page-content .sidebar .sidebar_content_box .sidebar_content_box_title a:hover { color: #28822f }
 .post-page-content .sidebar .sidebar_content_box .row { justify-content: center; align-items: center }
 
-/* Class Page */
+/* Course Page */
 .page-content .breadcrumb { margin-bottom: 35px }
 .class_page .card { box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19) }
 .class_page .card .card-title a { color: #343a40; text-decoration: none; transition: 0.2s }
@@ -55,6 +55,16 @@ a { text-decoration: none }
 .class_page .card .card-text p { color: #777 }
 .class_page .card .card-body { display: flex; flex-wrap: wrap }
 .class_page .card .card-body .card-button { display: flex; align-self: flex-end }
+.class_page .card .card-button a { margin-right: 10px }
+.class_page .card .card-button a:last-child { margin-right: 0 }
+
+/* Course Detail Page */
+.class_page .card-time p { font-weight: bold }
+
+/* Meet Page */
+.meet_page .image_col img { width: 100% }
+.meet_page .form_submit button { width: 100% }
+.reverse { flex-direction: row-reverse }
 
 /* Category Page */
 .active_page .card-body .row { justify-content: center; align-items: center }
@@ -75,7 +85,6 @@ a { text-decoration: none }
 .client_lr_form .hint-text { color: #999; margin-bottom: 30px; text-align: center }
 .client_lr_form form { color: #999; border-radius: 3px; margin-bottom: 15px; background: #f2f3f7; box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3); padding: 30px }
 .client_lr_form form h2 { color: #28a745 }
-
 .client_lr_form .form-group { margin-bottom: 20px }
 .client_lr_form input[type="checkbox"] { margin-top: 3px }
 .client_lr_form .btn { font-size: 16px; font-weight: bold; min-width: 140px; outline: none !important }
@@ -85,7 +94,6 @@ a { text-decoration: none }
 .client_lr_form a:hover { text-decoration: none }
 .client_lr_form form a { color: #5cb85c; text-decoration: none }
 .client_lr_form form a:hover { text-decoration: underline }
-
 .client_r_from { margin: 50px auto; font-size: 15px; min-height: 65vh }
 .client_r_from form { margin-bottom: 15px; background: #f7f7f7; box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3); padding: 30px }
 .client_r_from h2 { margin: 0 0 15px }
@@ -100,7 +108,6 @@ a { text-decoration: none }
 .client_r_from .hint-text { color: #999; margin-bottom: 30px; text-align: center }
 .client_r_from form { color: #999; border-radius: 3px; margin-bottom: 15px; background: #f2f3f7; box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3); padding: 30px }
 .client_r_from form h2 { color: #28a745 }
-
 .client_r_from .form-group { margin-bottom: 20px }
 .client_r_from input[type="checkbox"] { margin-top: 3px }
 .client_r_from .btn { font-size: 16px; font-weight: bold; min-width: 140px; outline: none !important }
