Profile and Active-Detail Page

--- a/public/client/css/main-style.css
+++ b/public/client/css/main-style.css
@@ -50,8 +50,10 @@ a { text-decoration: none }
 /* Course Page */
 .page-content .breadcrumb { margin-bottom: 35px }
 .class_page .card { box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19) }
+.class_page .card .card-image { min-height: 200px }
 .class_page .card .card-title a { color: #343a40; text-decoration: none; transition: 0.2s }
 .class_page .card .card-title a:hover { color: #28822f }
+.class_page .card .card-text { margin-bottom: 15px }
 .class_page .card .card-text p { color: #777 }
 .class_page .card .card-body { display: flex; flex-wrap: wrap }
 .class_page .card .card-body .card-button { display: flex; align-self: flex-end }
@@ -115,3 +117,7 @@ a { text-decoration: none }
 .client_r_from a:hover { text-decoration: none }
 .client_r_from form a { color: #5cb85c; text-decoration: none }
 .client_r_from form a:hover { text-decoration: underline }
+
+/* Profile Page */
+.profile_page .card { margin-bottom: 50px; border: 1px solid #28822f; transition: 0.3s }
+.profile_page .card:hover { box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 1px solid #777 }
