--- a/public/client/css/main-style.css
+++ b/public/client/css/main-style.css
@@ -153,3 +153,191 @@ a { text-decoration: none }
 /* Profile Page */
 .profile_page .card { margin-bottom: 50px; border: 1px solid #28822f; transition: 0.3s }
 .profile_page .card:hover { box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 1px solid #777 }
+
+/* New Footer */
+/* Footer Main */
+ .footer-main{
+     padding: 70px 0px;
+     background: #191b19d4;
+}
+
+.footer-main ul {
+	padding: 0;
+	margin: 0;
+}
+.footer-link-contact ul li p {
+	padding: 0;
+}
+
+ul.wuc {
+	margin: 0px;
+	padding: 0px;
+}
+ .footer-widget h4 {
+     color: #ffffff;
+     font-size: 16px;
+     text-transform: uppercase;
+     letter-spacing: 2px;
+     margin-bottom: 20px;
+     position: relative;
+     font-weight: 700;
+}
+ .footer-widget h4::before {
+     border-bottom: 3px solid #d33b33;
+     content: "";
+     height: 3px;
+     width: 100%;
+     position: absolute;
+     bottom: -6px;
+     left: 0px;
+}
+ .footer-widget p {
+     color: #ffffff;
+     font-weight: 400;
+     font-size: 14px;
+     padding-bottom: 20px;
+}
+ .footer-widget ul{
+     display: inline-block;
+}
+ .footer-widget ul li {
+     float: left;
+     margin-right: 5px;
+     list-style: none;
+}
+ .footer-widget ul li a {
+     color: #ffffff;
+     display: inline-block;
+     width: 36px;
+     height: 36px;
+     border: 2px solid #ffffff;
+     text-align: center;
+     line-height: 32px;
+}
+ .footer-widget ul li a:hover {
+     color: #d33b33;
+     border-color: #d33b33;
+}
+ .footer-link{
+}
+ .footer-link h4{
+     color: #ffffff;
+     font-size: 16px;
+     text-transform: uppercase;
+     letter-spacing: 2px;
+     margin-bottom: 20px;
+     position: relative;
+     font-weight: 700;
+}
+ .footer-link h4::before {
+     border-bottom: 3px solid #d33b33;
+     content: "";
+     height: 3px;
+     width: 100%;
+     position: absolute;
+     bottom: -6px;
+     left: 0px;
+}
+ .footer-link ul li {
+     margin-right: 5px;
+     list-style: none;
+}
+ .footer-link ul li a {
+     color: #ffffff;
+     text-align: left;
+     display: block;
+     line-height: 32px;
+     position: relative;
+     padding-left: 15px;
+     transition: all .3s ease-in-out;
+     -webkit-transition: all .3s ease-in-out;
+     -moz-transition: all .3s ease-in-out;
+     -o-transition: all .3s ease-in-out;
+     -ms-transition: all .3s ease-in-out;
+}
+ .footer-link ul li a::before {
+     font-family: FontAwesome;
+     content: "\f105";
+     position: absolute;
+     left: 5px;
+     line-height: 30px;
+     font-size: 16px;
+     transition: all .3s ease-in-out;
+     -webkit-transition: all .3s ease-in-out;
+     -moz-transition: all .3s ease-in-out;
+     -o-transition: all .3s ease-in-out;
+     -ms-transition: all .3s ease-in-out;
+}
+ .footer-link ul li a:hover::before {
+     left: 5px;
+}
+ .footer-link ul li a:hover {
+     color: #d33b33;
+     border-color: #d33b33;
+     padding-left: 20px;
+}
+ .footer-link-contact h4{
+     color: #ffffff;
+     font-size: 16px;
+     text-transform: uppercase;
+     letter-spacing: 2px;
+     margin-bottom: 20px;
+     position: relative;
+     font-weight: 700;
+}
+ .footer-link-contact h4::before {
+     border-bottom: 3px solid #d33b33;
+     content: "";
+     height: 3px;
+     width: 100%;
+     position: absolute;
+     bottom: -6px;
+     left: 0px;
+}
+ .footer-link-contact ul li{
+     margin-bottom: 12px;
+     list-style: none;
+
+}
+ .footer-link-contact ul li i{
+     position: absolute;
+     left: 0;
+     top: 5px;
+     padding-right: 6px;
+}
+ .footer-link-contact ul li p{
+     padding-left: 25px;
+     color: #ffff;
+     position: relative;
+}
+ .footer-link-contact ul li p{
+     font-size: 16px;
+     color: #ffff;
+     font-weight: 300;
+     padding-right: 16px;
+     line-height: 24px;
+}
+ .footer-link-contact ul li p a{
+     color: #ffff;
+}
+ .footer-link-contact ul li p a:hover{
+     color: #d33b33;
+}
+/*------------------------------------------------------------------ Copyright -------------------------------------------------------------------*/
+ .footer-copyright{
+     background: #8c8f96ad;
+     padding: 10px 0px;
+     height: 40px;
+     position: relative;
+}
+ .footer-copyright p {
+     text-align: center;
+     color: #ffffff;
+     font-size: 13px;
+}
+ .footer-copyright p a{
+     color: #ffffff;
+}
+ .footer-copyright p a:hover{
+     color: #d33b33;
+}
